--- a/index.html
+++ b/index.html
@@ -13,20 +13,6 @@
 
 <body>
     <nav id="nav">
-        <div class="navTop">
-            <div class="navItem"> 
-                <img src="Media & Images/sneakers.png" alt="">
-            </div>
-            <!-- <div class="navItem">
-                <div class="search">
-                    <input type="text" placeholder="Search..." class="searchInput">
-                    <img src="./img/search.png" width="20" height="20" alt="" class="searchIcon">
-                </div>
-            </div> -->
-            <div class="navItem">
-                <span class="limitedOffer">Koszyk</span>
-            </div>
-        </div>
         <div class="navBottom">
             <h3 class="menuItem">AIR FORCE</h3>
             <h3 class="menuItem">JORDAN</h3>
@@ -40,46 +26,46 @@
             <div class="sliderItem">
                 <img src="Media & Images/air.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">AIR FORCE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$119</h2>
+                <h1 class="sliderTitle">AIR FORCE</br>NOWY</br>SEZON</h1>
+                <h2 class="sliderPrice">473,53</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">KUP TERAZ</button>
                 </a>
             </div>
             <div class="sliderItem">
                 <img src="Media & Images/jordan.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">AIR JORDAN</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$149</h2>
+                <h1 class="sliderTitle">AIR JORDAN</br>NOWY</br>SEZON</h1>
+                <h2 class="sliderPrice">592,91</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">KUP TERAZ</button>
                 </a>
             </div>
             <div class="sliderItem">
                 <img src="Media & Images/blazer.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">BLAZER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$109</h2>
+                <h1 class="sliderTitle">BLAZER</br>NOWY</br>SEZON</h1>
+                <h2 class="sliderPrice">433,74</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">KUP TERAZ</button>
                 </a>
             </div>
             <div class="sliderItem">
                 <img src="Media & Images/crater.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">CRATER</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$129</h2>
+                <h1 class="sliderTitle">CRATER</br>NOWY</br>SEZON</h1>
+                <h2 class="sliderPrice">513,33</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">KUP TERAZ</button>
                 </a>
             </div>
             <div class="sliderItem">
                 <img src="Media & Images/hippie.png" alt="" class="sliderImg">
                 <div class="sliderBg"></div>
-                <h1 class="sliderTitle">HIPPIE</br> NEW</br> SEASON</h1>
-                <h2 class="sliderPrice">$99</h2>
+                <h1 class="sliderTitle">HIPPIE</br>NOWY</br>SEZON</h1>
+                <h2 class="sliderPrice">393,95</h2>
                 <a href="#product">
-                    <button class="buyButton">BUY NOW!</button>
+                    <button class="buyButton">KUP TERAZ</button>
                 </a>
             </div>
         </div>
@@ -88,23 +74,23 @@
     <div class="features">
         <div class="feature">
             <img src="Media & Images/shipping.png" alt="" class="featureIcon">
-            <span class="featureTitle">FREE SHIPPING</span>
-            <span class="featureDesc">Free worldwide shipping on all orders.</span>
+            <span class="featureTitle">DARMOWA DOSTAWA</span>
+            <span class="featureDesc">Darmowa dostawa na całym świecie na każdy produkt.</span>
         </div>
         <div class="feature">
             <img class="featureIcon" src="Media & Images/return.png" alt="">
-            <span class="featureTitle">30 DAYS RETURN</span>
-            <span class="featureDesc">No question return and easy refund in 14 days.</span>
+            <span class="featureTitle">30 DNI NA ZWROT</span>
+            <span class="featureDesc">Brak pytań i łatwe zwroty, pieniądze w 14 dni.</span>
         </div>
         <div class="feature">
             <img class="featureIcon" src="Media & Images/gift.png" alt="">
-            <span class="featureTitle">GIFT CARDS</span>
-            <span class="featureDesc">Buy gift cards and use coupon codes easily.</span>
+            <span class="featureTitle">KARTY PODARUNKOWE</span>
+            <span class="featureDesc">Kupuj karty podarunkowe i prezenty.</span>
         </div>
         <div class="feature">
             <img class="featureIcon" src="Media & Images/contact.png" alt="">
-            <span class="featureTitle">CONTACT US!</span>
-            <span class="featureDesc">Keep in touch via email and support system.</span>
+            <span class="featureTitle">KONTAKT!</span>
+            <span class="featureDesc">Zostańmy w kontakcie dzięki naszemu e-mail system.</span>
         </div>
     </div>
 
@@ -112,10 +98,11 @@
         <img src="Media & Images/air.png" alt="" class="productImg">
         <div class="productDetails">
             <h1 class="productTitle">AIR FORCE</h1>
-            <h2 class="productPrice">$199</h2>
-            <p class="productDesc">Lorem ipsum dolor sit amet consectetur impal adipisicing elit. Alias assumenda
-                dolorum
-                doloremque sapiente aliquid aperiam.</p>
+            <h2 class="productPrice">473,53 PLN</h2>
+            <p class="productDesc">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc nec ultricies
+                ultricies, nunc nec
+            </p>
             <div class="colors">
                 <div class="color"></div>
                 <div class="color"></div>
@@ -125,30 +112,32 @@
                 <div class="size">43</div>
                 <div class="size">44</div>
             </div>
-            <button class="productButton">BUY NOW!</button>
+            <button class="productButton">KUP TERAZ!</button>
         </div>
-        <div class="payment">
-            <h1 class="payTitle">Personal Information</h1>
-            <label>Name and Surname</label>
-            <input type="text" placeholder="John Doe" class="payInput">
-            <label>Phone Number</label>
-            <input type="text" placeholder="+1 234 5678" class="payInput">
-            <label>Address</label>
-            <input type="text" placeholder="Elton St 21 22-145" class="payInput">
-            <h1 class="payTitle">Card Information</h1>
-            <div class="cardIcons">
-                <img src="Media & Images/visa.png" width="40" alt="" class="cardIcon">
-                <img src="Media & Images/master.png" alt="" width="40" class="cardIcon">
+        <form action="Directories/server.php" method="post">
+            <div class="payment">
+                <h1 class="payTitle">Inforamcje osobiste</h1>
+                <label>Imię i Nazwisko</label>
+                <input type="text" name="name" placeholder="Jan Kowalski" class="payInput">
+                <label>Numer telefonu</label>
+                <input type="text" name="phone" placeholder="+48 123 456 789" class="payInput">
+                <label>Adres</label>
+                <input type="text" name="address" placeholder="Poland, Katowice 40-400" class="payInput">
+                <h1 class="payTitle">Karta płatnicza</h1>
+                <div class="cardIcons">
+                    <img src="Media & Images/visa.png" width="40" alt="" class="cardIcon">
+                    <img src="Media & Images/master.png" alt="" width="40" class="cardIcon">
+                </div>
+                <input type="password" name="cardNumber" class="payInput" placeholder="Card Number">
+                <div class="cardInfo">
+                    <input type="text" name="expiryMonth" placeholder="mm" class="payInput sm">
+                    <input type="text" name="expiryYear" placeholder="yyyy" class="payInput sm">
+                    <input type="text" name="cvv" placeholder="cvv" class="payInput sm">
+                </div>
+                <button type="submit" class="payButton">Checkout!</button>
+                <span class="close">X</span>
             </div>
-            <input type="password" class="payInput" placeholder="Card Number">
-            <div class="cardInfo">
-                <input type="text" placeholder="mm" class="payInput sm">
-                <input type="text" placeholder="yyyy" class="payInput sm">
-                <input type="text" placeholder="cvv" class="payInput sm">
-            </div>
-            <button class="payButton">Checkout!</button>
-            <span class="close">X</span>
-        </div>
+        </form>
     </div>
     <div class="gallery">
         <div class="galleryItem">
@@ -173,11 +162,11 @@
                 alt="" class="nsImg">
         </div>
         <div class="nsItem">
-            <h3 class="nsTitleSm">WINTER NEW ARRIVALS</h3>
-            <h1 class="nsTitle">New Season</h1>
-            <h1 class="nsTitle">New Collection</h1>
+            <h3 class="nsTitleSm">LETNIA KOLEKCJA</h3>
+            <h1 class="nsTitle">Nowy Sezon</h1>
+            <h1 class="nsTitle">Nowa Kolekcja</h1>
             <a href="#nav">
-                <button class="nsButton">CHOOSE YOUR STYLE</button>
+                <button class="nsButton">WYBIERZ SWÓJ STYL</button>
             </a>
         </div>
         <div class="nsItem">
@@ -188,27 +177,27 @@
     <footer>
         <div class="footerLeft">
             <div class="footerMenu">
-                <h1 class="fMenuTitle">About Us</h1>
+                <h1 class="fMenuTitle">O nas</h1>
                 <ul class="fList">
-                    <li class="fListItem">Company</li>
-                    <li class="fListItem">Contact</li>
-                    <li class="fListItem">Careers</li>
-                    <li class="fListItem">Affiliates</li>
-                    <li class="fListItem">Stores</li>
+                    <li class="fListItem">Firma</li>
+                    <li class="fListItem">Kontakt</li>
+                    <li class="fListItem">Kariera</li>
+                    <li class="fListItem">Afirmacja</li>
+                    <li class="fListItem">Sklepy</li>
                 </ul>
             </div>
             <div class="footerMenu">
-                <h1 class="fMenuTitle">Useful Links</h1>
+                <h1 class="fMenuTitle">Użyteczne linki</h1>
                 <ul class="fList">
-                    <li class="fListItem">Support</li>
-                    <li class="fListItem">Refund</li>
+                    <li class="fListItem">Pomoc</li>
+                    <li class="fListItem">Zwrot</li>
                     <li class="fListItem">FAQ</li>
-                    <li class="fListItem">Feedback</li>
-                    <li class="fListItem">Stories</li>
+                    <li class="fListItem">Opinia</li>
+                    <li class="fListItem">Historie</li>
                 </ul>
             </div>
             <div class="footerMenu">
-                <h1 class="fMenuTitle">Products</h1>
+                <h1 class="fMenuTitle">Produkty</h1>
                 <ul class="fList">
                     <li class="fListItem">Air Force</li>
                     <li class="fListItem">Air Jordan</li>
@@ -220,14 +209,14 @@
         </div>
         <div class="footerRight">
             <div class="footerRightMenu">
-                <h1 class="fMenuTitle">Subscribe to our newsletter</h1>
+                <h1 class="fMenuTitle">Subskrybuj nasz Newsletter</h1>
                 <div class="fMail">
                     <input type="text" placeholder="your@email.com" class="fInput">
-                    <button class="fButton">Join!</button>
+                    <button class="fButton">Dołącz!</button>
                 </div>
             </div>
             <div class="footerRightMenu">
-                <h1 class="fMenuTitle">Follow Us</h1>
+                <h1 class="fMenuTitle">Obserwuj nas</h1>
                 <div class="fIcons">
                     <img src="Media & Images/facebook.png" alt="" class="fIcon">
                     <img src="Media & Images/twitter.png" alt="" class="fIcon">
