--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+    <div class="cart" style="z-index: 1;">
+        <div class="cart-content">
+            <h3>Koszyk</h3>
+            <ul class="cart-items">
+                <!-- Tutaj będą wyświetlane produkty w koszyku -->
+            </ul>
+            <div class="cart-total">
+                <strong>Suma:</strong> <span class="total">0 PLN</span>
+            </div>
+        </div>
+    </div> 
     <nav id="nav">
         <div class="navBottom">
             <h3 class="menuItem">AIR FORCE</h3>
@@ -155,7 +166,7 @@
             <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
                 alt="" class="galleryImg">
         </div>
-    </div>
+    </div>   
     <div class="newSeason">
         <div class="nsItem">
             <img src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
