--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <input type="text" name="phone" placeholder="+48 123 456 789" class="payInput">
                 <label>Adres</label>
                 <input type="text" name="address" placeholder="Poland, Katowice 40-400" class="payInput">
+                <input type="number" name="price" placeholder="400 PLN" class="payInput">
                 <h1 class="payTitle">Karta płatnicza</h1>
                 <div class="cardIcons">
                     <img src="Media & Images/visa.png" width="40" alt="" class="cardIcon">
